# ellipse-nuclei-segmentation

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
src/ellipse_nuclei_segmentation/: __init__.py  _annotations.py  _nd2_loader.py  _plugin.py  _visualization.py  napari.yaml
tests/: test_widget.py
